fix colorpicker appearence and z-index

--- a/src/components/Column/ColorPicker.scss
+++ b/src/components/Column/ColorPicker.scss
@@ -1,6 +1,8 @@
 @import "src/constants/style";
 
 .column__header-color-picker-dropdown {
+  z-index: 9999;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,10 +10,12 @@
   //gap: $spacing--xxs;
   //padding-top: $spacing--xxs;
   padding-bottom: $spacing--xxs;
+  box-shadow: 0 0 20px rgba(55, 62, 79, 0.12);
+  background-color: #ffffff;
+  //background-color: $gray--300;
 
   //width: 40px;
 
-  background-color: $gray--300;
   //box-shadow:
   //  0 4px 6px -1px rgb(0 0 0 / 0.1),
   //  0 2px 4px -2px rgb(0 0 0 / 0.1);
